refactor everything to mongo structure