@@ -1,6 +1,10 @@
 package com.beligum.blocks.core.endpoints;
 
 import com.beligum.blocks.core.base.Blocks;
+import com.beligum.blocks.core.identifiers.BlockId;
+import com.beligum.blocks.core.models.Blueprint;
+import com.beligum.blocks.core.models.PageTemplate;
+import com.beligum.blocks.core.urlmapping.UrlDispatcher;
 import com.beligum.blocks.core.urlmapping.redis.XMLUrlIdMapper;
 import com.beligum.blocks.core.caching.redis.BlueprintsCache;
 import com.beligum.blocks.core.caching.redis.PageTemplatesCache;
@@ -10,10 +14,6 @@ import com.beligum.blocks.core.dbs.redis.RedisDatabase;
 import com.beligum.blocks.core.identifiers.redis.BlocksID;
 import com.beligum.blocks.core.models.Entity;
 import com.beligum.blocks.core.models.StoredTemplate;
-import com.beligum.blocks.core.models.redis.templates.AbstractTemplate;
-import com.beligum.blocks.core.models.redis.templates.EntityTemplate;
-import com.beligum.blocks.core.models.redis.templates.Blueprint;
-import com.beligum.blocks.core.models.redis.templates.PageTemplate;
 import com.beligum.blocks.core.parsers.visitors.template.HtmlVisitor;
 import com.beligum.blocks.core.parsers.SimpleTraversor;
 import com.beligum.blocks.core.parsers.redis.TemplateParser;
@@ -59,52 +59,17 @@ public class EntitiesEndpoint
     {
         com.beligum.blocks.core.models.Blueprint blueprint = Blocks.templateCache().getBlueprint(entityClassName, Blocks.config().getDefaultLanguage());
         URL pageURL = new URL(pageUrl);
-        //        BlocksID existingId = XMLUrlIdMapper.getInstance().getId(pageURL);
-        //        xEntityTemplate lastVersion = (EntityTemplate) RedisDatabase.getInstance().fetchLastVersion(existingId, EntityTemplate.class);
+        BlockId existingId = Blocks.urlDispatcher().findId(pageURL);
 
-        //        BlocksID newId = null;
-        //if a not-deleted version exists in db, throw error
-        //        if(lastVersion != null && !lastVersion.getDeleted()){
-        //            throw new Exception("Cannot create already existing entity '" + lastVersion.getId().getUrl() + "' with url '" + pageURL + "'.");
-        ////            //if the url to the template did not hold language-information,
-        ////            if (!id.hasLanguage()) {
-        ////                id = new BlocksID(entityUrl, BlocksID.LAST_VERSION, true);
-        ////            }
-        ////            else if (lastVersion.getLanguages().contains(id.getLanguage()) && lastVersion.getDeleted() == false) {
-        ////                throw new Exception("Cannot create an entity-language which already exists! This should not happen.");
-        ////            }
-        ////            else {
-        ////
-        ////            }
-        //        }
-        //        //if the url isn't taken yet, render a new id
-        //        else if(lastVersion == null){
-        //            newId = BlocksID.renderNewEntityTemplateID(blueprint, existingId.getLanguage());
-        //        }
-        //        //if a deleted version is being revived, read it to the mapping
-        //        else{
-        //            newId = existingId;
-        //        }
-        //        TemplateParser.saveNewEntityTemplateToDb(newId, blueprint);
+        if (existingId != null) {
+            // template exists
+            throw new Exception("Cannot create already existing entity with url '" + pageURL + "'.");
+        }
 
         Element element = blueprint.getRenderedTemplateAsElement();
         String language = Blocks.urlDispatcher().getLanguage(pageURL);
         StoredTemplate newPage = Blocks.factory().createStoredTemplate(element, language);
-        newPage.setLanguage(language);
         Blocks.database().save(newPage);
-
-
-        //
-        //        String[] splitUrl = Languages.translateUrl(pageURL.toString(), Languages.NO_LANGUAGE);
-        //        String lang = splitUrl[1];
-        //        String url = splitUrl[0];
-        //
-        //        if (lang.isEmpty()) lang = Blocks.config().getDefaultLanguage();
-
-        //        String unlanguagedIdUrl = Languages.translateUrl(newPage.getId(), Languages.NO_LANGUAGE)[0];
-        //        if(!unlanguagedPageUrl.equals(unlanguagedIdUrl)){
-        //            XMLUrlIdMapper.getInstance().put(newId, pageURL);
-        //        }
 
         Blocks.urlDispatcher().addId(pageURL, newPage.getId(), language);
         /*
@@ -118,10 +83,16 @@ public class EntitiesEndpoint
     @Produces(MediaType.APPLICATION_JSON)
     public Response getClassTemplate(@PathParam("blueprintType") String blueprintName) throws Exception
     {
-        String classHtml = TemplateParser.renderTemplate(BlueprintsCache.getInstance().get(blueprintName));
-        HashMap<String, String> json = new HashMap<String, String>();
-        json.put("template", classHtml);
-        return Response.ok(json).build();
+        Blueprint blueprint = Blocks.templateCache().getBlueprint(blueprintName, Blocks.config().getDefaultLanguage());
+        if (blueprint != null) {
+            String classHtml = blueprint.getRenderedTemplate(false, true).toString();
+            HashMap<String, String> json = new HashMap<String, String>();
+            json.put("template", classHtml);
+            return Response.ok(json).build();
+        } else {
+            throw new Exception("Blueprint not found with name: " + blueprintName);
+        }
+
     }
 
 
@@ -134,32 +105,18 @@ public class EntitiesEndpoint
     public Response updateEntity(@PathParam("entityUrlPath") String pageUrlPath, @QueryParam("deleted") @DefaultValue("false") boolean fetchDeleted, String pageHtml)
     {
         try{
-            //            if(pageUrlPath.endsWith("#")){
-            //                pageUrlPath = pageUrlPath.substring(0, pageUrlPath.length()-1);
-            //            }
-            //            URL pageUrl = new URL(Blocks.config().getSiteDomainUrl(), pageUrlPath);
-            //            //ignore the query-part of the url to fetch an entity from db, use only the path of the url
-            //            pageUrl = new URL(pageUrl, pageUrl.getPath());
-            //            BlocksID entityId = null;
-            //            if(!fetchDeleted){
-            //                entityId = XMLUrlIdMapper.getInstance().getId(pageUrl);
-            //            }
-            //            else{
-            //                entityId = XMLUrlIdMapper.getInstance().getLastId(pageUrl);
-            //            }
-            //            EntityTemplate entity = (EntityTemplate) RedisDatabase.getInstance().fetchLastVersion(entityId, EntityTemplate.class);
-            //            if(entity == null){
-            //                throw new Exception("Cannot update entity which doesn't exist: '" + pageUrl + ".");
-            //            }
-            //            TemplateParser.updateEntity(entityId, pageHtml);
-            //            if(fetchDeleted){
-            //                XMLUrlIdMapper.getInstance().put(entityId, pageUrl);
-            //            }
+
 
             // analyze html,
             // only properties should be a) singletons, b) 1 property that is not a singelton (with reference-to (or resource)) this will replace entity with id of url
             // only other properties allowed in root are properties with typeof
             URL pageUrl = new URL(Blocks.config().getSiteDomainUrl(), pageUrlPath);
+            BlockId id = Blocks.urlDispatcher().findId(pageUrl);
+
+            if (id == null) {
+                throw new Exception("Cannot update entity which doesn't exist: '" + pageUrl + ".");
+            }
+
             String language = Blocks.urlDispatcher().getLanguage(pageUrl);
             Document html = Jsoup.parse(pageHtml, Blocks.config().getSiteDomain(), Parser.htmlParser());
             HtmlVisitor htmlVisitor = new HtmlVisitor(pageUrl);
@@ -203,18 +160,21 @@ public class EntitiesEndpoint
 
     @POST
     @Path("/delete")
-    public Response deleteEntity(String url)
+    public Response deletePage(String url)
     {
         try {
-            URL entityUrl = new URL(url);
-            entityUrl = new URL(entityUrl, entityUrl.getPath());
-            BlocksID id = XMLUrlIdMapper.getInstance().getId(entityUrl);
-            AbstractTemplate lastVersion = (AbstractTemplate) RedisDatabase.getInstance().trash(id);
-            Set<BlocksID> languagedIds = lastVersion.getTemplates().keySet();
-            for(BlocksID languagedId : languagedIds) {
-                XMLUrlIdMapper.getInstance().remove(languagedId);
+            URL pageUrl = new URL(url);
+            BlockId id = Blocks.urlDispatcher().findId(pageUrl);
+            String language = Blocks.urlDispatcher().getLanguage(pageUrl);
+
+            if (id == null) {
+                throw new Exception("Cannot delete entity which doesn't exist: '" + pageUrl + ".");
             }
-            return Response.ok(entityUrl.toString()).build();
+
+            StoredTemplate storedTemplate = Blocks.database().fetchTemplate(id, language);
+            Blocks.urlDispatcher().removeId(pageUrl);
+            Blocks.database().remove(storedTemplate);
+            return Response.ok(pageUrl.toString()).build();
         }
         catch(Exception e){
             return Response.status(Response.Status.BAD_REQUEST).entity(I18n.instance().getMessage("entityDeleteFailed")).build();
@@ -232,10 +192,10 @@ public class EntitiesEndpoint
     public Response listEntities() throws Exception
     {
         List<String> entityNames = new ArrayList<String>();
-        List<Blueprint> addableClasses = BlueprintsCache.getInstance().getAddableClasses();
+        List<Blueprint> addableClasses = Blocks.templateCache().getAddableBlocks();
         for (Blueprint e : addableClasses) {
             if(!e.getName().equals(ParserConstants.DEFAULT_BLUEPRINT)){
-                entityNames.add(e.getName());
+                entityNames.add(e.getBlueprintName());
             }
         }
         return Response.ok(entityNames).build();
@@ -251,7 +211,7 @@ public class EntitiesEndpoint
     public Response listTemplates() throws Exception
     {
         List<String> templateNames = new ArrayList<String>();
-        for (PageTemplate e : PageTemplatesCache.getInstance().values()) {
+        for (PageTemplate e : Blocks.templateCache().getPagetemplates(Blocks.config().getDefaultLanguage())) {
             if(!e.getName().equals(ParserConstants.DEFAULT_PAGE_TEMPLATE)){
                 templateNames.add(e.getName());
             }
@@ -266,36 +226,43 @@ public class EntitiesEndpoint
     public Response changeTemplate(@FormParam("template") String templateName, @FormParam("id") String id)
                     throws Exception
     {
-        Database<AbstractTemplate> redis = RedisDatabase.getInstance();
         URL url = new URL(id);
-        BlocksID blocksId = XMLUrlIdMapper.getInstance().getId(url);
-        EntityTemplate entityTemplate = (EntityTemplate) redis.fetchLastVersion(blocksId, EntityTemplate.class);
-        entityTemplate.setPageTemplateName(templateName);
-        String entity = entityTemplate.renderEntityInPageTemplate(entityTemplate.getLanguage());
-        return Response.ok(entity).build();
+        BlockId blockId = Blocks.urlDispatcher().findId(url);
+        String language = Blocks.urlDispatcher().getLanguage(url);
+        if (blockId != null) {
+            PageTemplate pageTemplate = Blocks.templateCache().getPagetemplate(templateName, language);
+            if (pageTemplate == null) {
+                throw new Exception("Page template does not exist");
+            }
+            StoredTemplate storedTemplate = Blocks.database().fetchTemplate(blockId, language);
+            storedTemplate.setPageTemplateName(templateName);
+            Blocks.database().save(storedTemplate);
+        }
+
+        return Response.ok().build();
     }
 
-    @POST
-    @Path("/deletedversion")
-    public Response showDeletedVersion(@FormParam("page-url") String pageUrl) throws Exception
-    {
-        BlocksID id = XMLUrlIdMapper.getInstance().getLastId(new URL(pageUrl));
-        List<AbstractTemplate> versionList = RedisDatabase.getInstance().fetchVersionList(id, EntityTemplate.class);
-        EntityTemplate lastAccessibleVersion = null;
-        Iterator<AbstractTemplate> it = versionList.iterator();
-        while(lastAccessibleVersion == null && it.hasNext()){
-            EntityTemplate version = (EntityTemplate) it.next();
-            if(version != null && !version.getDeleted()){
-                lastAccessibleVersion = version;
-            }
-        }
-        if(lastAccessibleVersion != null) {
-            String pageUrlPath = new URL(pageUrl).getPath().substring(1);
-            return Response.seeOther(URI.create(ApplicationEndpointRoutes.getPageWithId(pageUrlPath, new Long(lastAccessibleVersion.getVersion()), true).getAbsoluteUrl())).build();
-        }
-        else{
-            Logger.error("Bad request: cannot revive '" + pageUrl + "' to the state before it was deleted, since no version is present in db which is not deleted.");
-            return Response.status(Response.Status.BAD_REQUEST).build();
-        }
-    }
+//    @POST
+//    @Path("/deletedversion")
+//    public Response showDeletedVersion(@FormParam("page-url") String pageUrl) throws Exception
+//    {
+//        BlocksID id = XMLUrlIdMapper.getInstance().getLastId(new URL(pageUrl));
+//        List<AbstractTemplate> versionList = RedisDatabase.getInstance().fetchVersionList(id, EntityTemplate.class);
+//        EntityTemplate lastAccessibleVersion = null;
+//        Iterator<AbstractTemplate> it = versionList.iterator();
+//        while(lastAccessibleVersion == null && it.hasNext()){
+//            EntityTemplate version = (EntityTemplate) it.next();
+//            if(version != null && !version.getDeleted()){
+//                lastAccessibleVersion = version;
+//            }
+//        }
+//        if(lastAccessibleVersion != null) {
+//            String pageUrlPath = new URL(pageUrl).getPath().substring(1);
+//            return Response.seeOther(URI.create(ApplicationEndpointRoutes.getPageWithId(pageUrlPath, new Long(lastAccessibleVersion.getVersion()), true).getAbsoluteUrl())).build();
+//        }
+//        else{
+//            Logger.error("Bad request: cannot revive '" + pageUrl + "' to the state before it was deleted, since no version is present in db which is not deleted.");
+//            return Response.status(Response.Status.BAD_REQUEST).build();
+//        }
+//    }
 }
